2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.csproj: Flush.

2009-10-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Fix Pocess/Process
	  spelling. Don't lock in IsRunning or MD can deadlock.

2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ThreadInfo.cs:
	* Mono.Debugging.Client/ProcessInfo.cs:
	* Mono.Debugging.Client/DebuggerSession.cs: Use long for
	  thread and process id.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Don't show
	  the static/non-public groups if they don't contain elements.
	  Fixes bug #543782 - Debug tooltip always shows Static
	  members group.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs:
	* Mono.Debugging.Evaluation/NamespaceValueReference.cs:
	  Alphabetically sort members of types. Fixes bug #543780 -
	  Debug tooltip shows members in random order.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs: Allow setting the type
	  name.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added null
	  check.

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation\ObjectValueAdaptor.cs: Add missing
	  length check.

2009-09-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Some minor
	  fixes.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/BreakpointStore.cs: Clear(): Properly
	  duplicate breakpoint list.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs: Added some debug code.

	* Mono.Debugging.Evaluation/ICollectionAdaptor.cs: